# code-review-openenv

./: .dockerignore  Dockerfile  README.md  client.py  inference.py  inference_out.txt  openenv.yaml  pyproject.toml  requirements.txt  schema.json  schema_utf8.json  server_err.txt  server_out.txt
env/: __init__.py  environment.py  models.py
graders/: __init__.py  grader.py
openenv_code_review_env.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: __init__.py  app.py
tasks/: __init__.py  easy_task.py  hard_task.py  medium_task.py
